Fixed project icon centering issues, removed redundant overflows

--- a/sarissa/src/components/Projects/index.scss
+++ b/sarissa/src/components/Projects/index.scss
@@ -1,3 +1,12 @@
+.projects-container {
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+}
 .welcome {
     width: 100%;
     margin-top: 5%;
@@ -193,10 +202,6 @@
 
     .welcome {
 
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-
         .projects-welcome-title {
             color: #ffffff;
             font-weight: normal;
@@ -216,25 +221,22 @@
 
     .project-links {
 
-        position: absolute;
+        width: 100%;
         display: grid;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
-        top: 20%;
+
+        margin-top: 100px;
+        transform: translate(-75px);
 
         .project-link,
         .project-link-in-development {
 
-            margin-top: 20px;
             text-decoration: none;
-
             opacity: 0;
             animation: fadeInRight 0.5s ease-out forwards;
-            display: inline;
             width: 100%;
             align-items: center;
             justify-content: center;
+            margin-top: 20%;
 
             .project-image {
                 width: 200px;
